<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_groups"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_group_black_24dp"
            android:layout_gravity="left"
            android:title="@string/my_groups_nav"
            app:showAsAction="never"/>

        <item
            android:id="@+id/my_shifts"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_groups_24dp"
            android:title="@string/my_shifts"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/my_availability"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_alarm_on_black_24dp"
            android:title="@string/my_availability"
            app:showAsAction="never"/>
        <item
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_drafts_black_24dp"
            android:title="@string/notifications"
            app:showAsAction="never"/>
        <item
            android:id="@+id/requests"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_sort_black_24dp"
            android:title="@string/requests"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_settings"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    </group>
</menu>