<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.schedulesmadeeasy.groupsxyz.LoginActivity">

    <Button
        android:id="@+id/sign_in_button_login"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorMainButton"
        android:text="@string/sign_in_login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="125dp"
        android:layout_height="111dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vectorlogo" />

    <TextView
        android:id="@+id/user_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/user_name_login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:labelFor="@+id/user_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login" />

    <EditText
        android:id="@id/user_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:text="@string/placeholder_user_name"
        app:layout_constraintStart_toStartOf="@+id/user_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/user_name_text_view"
        tools:text="@string/placeholder_user_name" />

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/password_login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:labelFor="@+id/password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text" />

    <EditText
        android:id="@id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/placeholder_login"
        app:layout_constraintStart_toStartOf="@+id/password_text_view"
        app:layout_constraintTop_toBottomOf="@+id/password_text_view"
        tools:text="@string/placeholder_login" />
</android.support.constraint.ConstraintLayout>
