<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.schedulesmadeeasy.groupsxyz.LoginActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="387dp"
        android:layout_height="569dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo_sign_up"
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_vectorlogo" />
            <TextView
                android:id="@+id/user_name_text_view_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="54dp"
                android:labelFor="@+id/user_name_edit_text_sign_up"
                android:text="@string/user_name_login"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_sign_up" />

            <EditText
                android:id="@+id/user_name_edit_text_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintStart_toStartOf="@+id/user_name_text_view_sign_up"
                app:layout_constraintTop_toBottomOf="@+id/user_name_text_view_sign_up" />

            <TextView
                android:id="@+id/password_text_view_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/password_edit_text_sign_up"
                android:text="@string/password_sign_up"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text_sign_up" />

            <EditText
                android:id="@+id/password_edit_text_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text=""
                app:layout_constraintStart_toStartOf="@id/password_text_view_sign_up"
                app:layout_constraintTop_toBottomOf="@id/password_text_view_sign_up" />

            <TextView
                android:id="@+id/textViewPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/password2EditText"
                android:text="@string/passwordAuthenticate"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.274"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_edit_text_sign_up" />

            <EditText
                android:id="@id/password2EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="@+id/textViewPassword2"
                app:layout_constraintTop_toBottomOf="@+id/textViewPassword2" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorMainButton"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password2EditText"
                app:layout_constraintVertical_bias="1.0" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
